--- a/Quiz.Api/appsettings.json
+++ b/Quiz.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Default": "Server=localhost;Port=5432;User Id=postgres;Password=123456;Database=db_myapi;POOLING=FALSE;Timeout=1000;CommandTimeout=1000;KeepAlive=300;"
+  "Settings": {
+    "ConnectionString": "Server=localhost;Port=5432;User Id=postgres;Password=123456;Database=db_myapi;POOLING=FALSE;Timeout=1000;CommandTimeout=1000;KeepAlive=300;"
   }
 }
