feat: create user

--- a/Quiz.Api/Quiz.Api.csproj
+++ b/Quiz.Api/Quiz.Api.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Quiz.Domain\Quiz.Domain.csproj" />
+    <ProjectReference Include="..\Quiz.Infra\Quiz.Infra.csproj" />
   </ItemGroup>
 
 </Project>
